fixed display overflow, some scaling and added keyboard inputs

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 #display {
 	grid-column: 1 / -1;
 	background-color: #b2b9b7;
-	display: flex;
+	display: block;
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: flex-end;
@@ -31,6 +31,9 @@
 	font-weight: initial;
 	text-shadow: 1.3px 1.3px #383838;
 	margin: 5px;
+	word-wrap: break-word;
+	word-break: break-all;
+	text-align: right;
 }
 
 #zero {
@@ -72,5 +75,9 @@ button:hover {
 	.calc-container {
 		grid-template-columns: repeat(4, 70px);
 		grid-template-rows: minmax(70px, auto) repeat(5, 50px);
+	}
+
+	#display {
+		font-size: 4rem;
 	}
 }
